--- a/index.html
+++ b/index.html
@@ -1,36 +1,33 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Ticktackjs : TickTackJS" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Ticktackjs by txipi</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Ticktackjs</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1>Ticktackjs</h1>
+        <p>TickTackJS</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/txipi/TickTackJS">View on GitHub</a>
+        <p class="view"><a href="https://github.com/txipi/TickTackJS">View the Project on GitHub <small>txipi/TickTackJS</small></a></p>
 
-          <h1 id="project_title">Ticktackjs</h1>
-          <h2 id="project_tagline">TickTackJS</h2>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/txipi/TickTackJS/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/txipi/TickTackJS/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+        <ul>
+          <li><a href="https://github.com/txipi/TickTackJS/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/txipi/TickTackJS/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/txipi/TickTackJS">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
         <h1>TickTackJS</h1>
 
 <p>Timer &amp; timing function analysis library for JavaScript</p>
@@ -111,17 +108,12 @@ $.plot($('#plot1'), plot1.values, plot1.options);
 
 <p>Plots are created using Flot, a pure Javascript plotting library for jQuery, by Ole Laursen <a href="http://code.google.com/p/flot/">http://code.google.com/p/flot/</a>.</p>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Ticktackjs maintained by <a href="https://github.com/txipi">txipi</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/txipi">txipi</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
     
-
   </body>
 </html>
